# graphagent2

./: .gitignore  config.toml  main.py  plans.txt  pyproject.toml
docker/graphagent/: docker-compose.yaml
src/: action.py  agent.py  memory.py  memory_context.py  memory_memory.py  memory_observation.py  memory_state_update.py  memory_thought.py  policy.py  task.py  task_applicability.py  task_compact_goal.py  task_evidence.py  task_goal_context.py  task_memory_record.py  task_pitfall_fix.py  task_subgoal.py  tool.py
src/artifacts/: models.py  policy.py  store.py  tools.py
src/llm/: CustomEmbeddingClient.py  CustomLLMClient.py  agent_client.py
src/mcp/: mcp_streamable_client.py
src/mcp_server/: mcp_client.py  mcp_streamable_client.py
src/prompts/: llm_post_thinking.txt  llm_pre_thinking.txt  llm_thinking.txt
src/rag/: agent_embeding.py  embeding_utils.py  models.py  pgvector_rag.py
src/thinking/: llm_thought_manager.py  rag_thought_manager.py  template_thought_manager.py  thought_manager.py
src/utils/: __init__.py  config.py  redis_client.py
