[project]
name = "graphagent"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "zhuravlev.andrey", email = "andrey777zhuravl@gmail.com"},
]
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "backoff==2.2.1",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "colorama==0.4.6",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "graphiti-core==0.24.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "jiter==0.12.0",
    "neo4j==6.0.3",
    "numpy==2.3.5",
    "openai==2.8.1",
    "posthog==7.0.1",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "requests==2.32.5",
    "six==1.17.0",
    "sniffio==1.3.1",
    "typer>=0.12",
    "tenacity==9.1.2",
    "tqdm==4.67.1",
    "typing-inspection==0.4.2",
    "typing-extensions==4.15.0",
    "urllib3==2.5.0",
    "fastapi>=0.122.0",
    "uvicorn>=0.38.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
